touches on styles

--- a/hex.html
+++ b/hex.html
@@ -28,7 +28,7 @@
     </div>
     <div class="content-container">
 
-        <div class="color-box"> Background Color: <span data-color-name class="color-name">None</span></div>
+        <div class="color-box"> Background Color: <span data-color-name class="color-name">White</span></div>
         <button data-hex-click-button>CLICK ME </button>
     </div>
     <script src="hexApp.js"></script>
