--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="content-container">
 
-        <div data-color-box class="color-box"> Background Color: <span data-color-name class="color-name">None</span></div>
+        <div data-color-box class="color-box"> Background Color: <span data-color-name class="color-name">White</span></div>
         <button data-click-button>CLICK ME </button>
     </div>
     <script src="app.js"></script>
