--- a/hex.html
+++ b/hex.html
@@ -17,7 +17,7 @@
                 <li>
                     <a href="index.html">Simple</a>
                 </li>
-                <li>
+                <li style="background-color:#00feb3">
                     <a href="hex.html">Hex</a>
                 </li>
                 <li>
