--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="color-flipper">Color Flipper</div>
         <div class="links">
             <ul>
-                <li>
+                <li style="background-color:#00feb3;">
                     <a href="index.html">Simple</a>
                 </li>
                 <li>
