--- a/pages/rgba.html
+++ b/pages/rgba.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color flipper</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div class="links">
             <ul>
                 <li>
-                    <a href="index.html">Simple</a>
+                    <a href="../index.html">Simple</a>
                 </li>
                 <li>
                     <a href="hex.html">Hex</a>
@@ -31,7 +31,7 @@
         <div class="color-box"> Background Color: <span data-color-name class="color-name">White</span></div>
         <button data-rgba-click-button>CLICK ME </button>
     </div>
-    <script src="rgbaApp.js"></script>
+    <script src="../js/rgbaApp.js"></script>
 </body>
 
 </html>
