--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color flipper</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -18,10 +18,10 @@
                     <a href="index.html">Simple</a>
                 </li>
                 <li>
-                    <a href="hex.html">Hex</a>
+                    <a href="pages/hex.html">Hex</a>
                 </li>
                 <li>
-                    <a href="rgba.html">rgba</a>
+                    <a href="pages/rgba.html">rgba</a>
                 </li>
             </ul>
         </div>
@@ -31,7 +31,7 @@
         <div data-color-box class="color-box"> Background Color: <span data-color-name class="color-name">White</span></div>
         <button data-click-button>CLICK ME </button>
     </div>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
